swap接口实现
